# firesim-lab

./: .gitignore  .readthedocs.yaml  Makefile  README.md  build.sbt
fslab-cli/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
fslab-cli/fslab/: __init__.py  cli.py
fslab-cli/fslab/bitstream/: __init__.py  aws_fpga.py  bitbuilder.py  build_stamp.py  buildconfig.py  buildhost.py  monitor.py  publisher.py
fslab-cli/fslab/cloudutils/: __init__.py
fslab-cli/fslab/cloudutils/aws/: __init__.py  fpga.py
fslab-cli/fslab/commands/: __init__.py  abandon.py  build.py  compile.py  context.py  fpga.py  init.py  monitor.py  sim.py
fslab-cli/fslab/pipeline/: __init__.py  host.py  lifecycle.py  monitor.py  stamp.py
fslab-cli/fslab/runtime/: __init__.py  launch.py  monitor_run.py  payloads.py  run_stamp.py  runconfig.py  runner.py
fslab-cli/fslab/schemas/: __init__.py  artifact_source.py  bitbuilder_args.py  host_model.py  parser.py  project.py  publish.py  registry.py  resolvers.py  runner_args.py
fslab-cli/fslab/templates/: CMakeLists.txt.j2  Config.scala.j2  DUT.scala.j2  Top.scala.j2  build.sbt.j2  driver.cc.j2  fslab.yaml.j2  user_rtl_readme.md.j2
fslab-cli/fslab/templates/bridges/fased/: ports.scala.j2  top_imports.scala.j2  wiring.scala.j2
fslab-cli/fslab/templates/bridges/iceblk/: ports.scala.j2  wiring.scala.j2  (+1 more)
fslab-cli/fslab/templates/remote_build/: f2.sh.j2
fslab-cli/fslab/templates/remote_run/: f2.sh.j2
fslab-cli/fslab/tests/: conftest.py  test_aws_volume_mappings.py  test_cli_commands.py  test_init.py  test_registry.py  test_rtl_parser.py  test_schema.py  test_schema_misc.py  test_schema_project.py  test_schema_registry.py  test_shell.py  test_state.py  test_templates.py  test_utils.py  test_versioning.py
fslab-cli/fslab/utils/: display.py  placeholders.py  regexes.py  rtl_parser.py  shell.py  state.py  streams.py  versioning.py
fslab-cli/scripts/ec2_f2/: bootstrap.sh
(+172 files in other folders)
